# OSA

./: .gitignore  .project  CHANGELOG  README.md  README.txt  install.sh  osa.dockerfile  osa.dockerfile.sh
.svn/: wc.db
ApplianceManager.php/: .htaccess  index.php
ApplianceManager.php/addons/: README  letsencrypt
ApplianceManager.php/api/: Auth.php  Counters.php  Groups.php  Logs.php  Nodes.php  Services.php  Users.php  counterDAO.php  groupDAO.php  index.php  logDAO.php  nodeDAO.php  restler-gateway.php  serviceDAO.php  sessionDAO.php  userDAO.php
ApplianceManager.php/auth/: Login.php  Logout.php  Token.php  index.php
ApplianceManager.php/counters/: Counters.php  counterDAO.php  index.php
ApplianceManager.php/css/: osa.css  osa.css.php
ApplianceManager.php/groups/: Groups.php  groupDAO.php  index.php
ApplianceManager.php/include/: BDControls.inc  BDMySQL.inc  Constants.php  Crypto.ini.php  Func.inc.php  HTTPClient.php  Localization.php  PDOFunc.php  PaginationFunc.inc.php  Settings.ini.php  commonHeaders.php  menu.php  menuBootstrap.php
ApplianceManager.php/js/: addons.js  addons.min.js  apidoc.min.js  common.min.js  counters.js  counters.js.php  dateIso.js  groups.js  jquery-ui-timepicker-addon.min.js  jquery.fileupload.min.js  logs.js  logs.js.php  logs.min.js.php  nodes.js  nodes.js.php  nodes.min.js.php  osa.js.php  quotas.js  quotas.min.js  services.js  services.js.php  services.min.js.php  sessions.min.js.php  touchScreenDevice.min.js  users.js  users.js.php  users.min.js.php  util.js  wait.min.js
ApplianceManager.php/js (copie)/: counters.js.php  date.min.js  logs.js.min.php  nodes.js.php  osa.js.php  services.js.php  touchScreenDevice.min.js  users.js.php
ApplianceManager.php/logs/: Logs.php  index.php  logDAO.php
ApplianceManager.php/nodes/: Nodes.php  index.php  nodeDAO.php
ApplianceManager.php/services/: .htaccess  (+3 more)
RunTimeAppliance/apache/module/: Makefile  Makefile.am  Makefile.in  NEWS  config.status  configure.ac  index.html  mod_osa.c  mod_osa.la  mod_osa.lo
RunTimeAppliance/apache/module/.libs/: mod_osa.la  mod_osa.lai  x.lai
RunTimeAppliance/apache/module/autom4te.cache/: output.0  requests  traces.0  traces.1
RunTimeAppliance/apache/module/base/: cmd_config.h  osa_base.c  osa_base.h
RunTimeAppliance/apache/module/debian/patches/: makefile_apxs2_destdir.diff
RunTimeAppliance/apache/module/mysql/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  compile.sh  compileAndDeploy.sh  configure.ac  mod_osa.c  osa.conf
RunTimeAppliance/apache/module/sqlite/: ChangeLog  Makefile.am  compileAndDeploy.sh  configure.ac  mod_osa.c  osa.conf  osa.load
debian/: config  control  prerm  rules
doc/: Open Service Access overview.docx  Schemas.pptx
docker/: configure-osa-container.sh  get-mysql-base.sh  osa.dockerfile  osa.dockerfile.sh  start-osa-container.sh
sql/: 2.0-to-2.1.sql  2.1-to-2.2.sql  2.2-to-2.3.sql  2.3-to-2.4.sql  2.4-to-2.5.sql  2.5-to-2.6.sql  2.6-to-2.7.sql  2.7-to-2.8.sql  2.8-to-2.8.1.sql  2.8-to-3.0.sql  2.8.1-to-3.0.sql  3.0-to-3.0.1.sql  3.0.1-to-3.1.sql  creation.sql
(+195 files in other folders)
